--- a/css/style.css
+++ b/css/style.css
@@ -9562,7 +9562,7 @@ h6,
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(51, 33, 29, 0.7);
+  background-color: rgba(18, 25, 35, 0.6) !important;
   z-index: 1;
 }
 
@@ -9647,8 +9647,9 @@ h6,
 .page-header,
 .offer,
 .footer {
-  background: linear-gradient(rgba(51, 33, 29, 0.9), rgba(51, 33, 29, 0.9)), url(../img/bg.jpg);
-  background-position: top;
+  background: linear-gradient(rgba(18, 25, 35, 0.6), rgba(18, 25, 35, 0.6)), url(../img/footer.jpg);
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
